[gd_scene load_steps=4 format=3 uid="uid://dcicag87lm50v"]

[ext_resource type="Script" path="res://Components/Inventory/slot_c.gd" id="1_45dmn"]
[ext_resource type="Texture2D" uid="uid://dej620v7oegqj" path="res://Sprites/inventory_slot.png" id="2_qlsk4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ktow3"]

[node name="Slot" type="PanelContainer"]
custom_minimum_size = Vector2(64, 64)
offset_right = 64.0
offset_bottom = 64.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_ktow3")
script = ExtResource("1_45dmn")

[node name="SlotContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="SlotTexture" type="TextureRect" parent="SlotContainer"]
layout_mode = 2
texture = ExtResource("2_qlsk4")
expand_mode = 1
stretch_mode = 5

[node name="ItemTexture" type="TextureRect" parent="SlotContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5
